--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2238,9 +2238,9 @@ textarea.form-input::-webkit-resizer { display: none; }
   background: var(--eerie-black-2);
   border: 1px solid var(--jet);
   border-radius: 20px;
-  width: 95%;
-  max-width: 1400px;
-  max-height: 95vh;
+  width: 98%;
+  max-width: 1800px;
+  height: 95vh;
   display: flex;
   flex-direction: column;
   box-shadow: var(--shadow-2);
@@ -2303,10 +2303,10 @@ textarea.form-input::-webkit-resizer { display: none; }
 @media (max-width: 768px) {
   .pdf-modal {
     width: 95%;
-    max-height: 85vh;
+    height: 90vh;
   }
 
   .pdf-modal-content embed {
-    height: 400px !important;
+    height: 100% !important;
   }
 }
